fix: center align text in password recovery form

--- a/src/features/forgot-password/ui/ForgotPasswordForm.module.css
+++ b/src/features/forgot-password/ui/ForgotPasswordForm.module.css
@@ -23,7 +23,7 @@
 .field {
   width: 100%;
   border-color: #333333;
-  margin-top: 7px;
+  margin-top: 37px;
 }
 
 .text {
@@ -32,19 +32,17 @@
   color: #797476;
   line-height: 24px;
   font-size: 14px;
-  margin-top: 17px;
+  margin-top: 7px;
 }
 
-.textLink{
-  font-size: 14px;
+.textLink {
   color: #fff;
-  line-height: 24px;
-  font-weight: 400;
   margin-top: 24px;
 }
 
-.button, .buttonPage  {
+.button, .buttonPage, .buttonPassword   {
   width: 100%;
+  max-width: 330px;
   margin-top: 24px;
 }
 
@@ -116,30 +114,39 @@
 .container {
   display: flex;
   justify-content: center;
+  text-align: center;
   align-items: center;
   /*min-height: 100vh;*/
-  /*padding: 20px;*/
 }
-
 .content {
+  display: flex;
   text-align: center;
-  max-width: 400px;
+  flex-direction: column;
+  align-items: center;
+  /*max-width: 390px;*/
   width: 100%;
 }
 
 .textPage {
   color: #fff;
   text-align: center;
+  align-items: center;
   max-width: 294px;
-
+  margin-top: 20px;
 }
 
 .buttonPage {
-  margin-top: 20px;
+  margin-top: 30px;
+  max-width: 294px;
 }
 
 .illustration {
   margin-top: 30px;
   max-width: 100%;
   height: auto;
+}
+
+/*создания нового пароля*/
+.buttonPassword {
+  margin-top: 41px;
 }
